# lorcana-training

./: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  new-set-reminder.yml  pretrain.yml  release.yml  train.yml
config/: quality_gates.yaml  training.yaml
scripts/: sweep_proposal.py
src/lorcana_training/: cli.py  config.py
src/lorcana_training/cards/: download.py  features.py  logical.py  max_copies.py  vocab.py
src/lorcana_training/dataset/: download.py  legality.py  rewrite.py  splits.py  validate.py
src/lorcana_training/eval/: evaluator_quality.py  functionality.py  gates.py  novelty.py  plausibility.py  report.py  synergy.py
src/lorcana_training/evaluator/: __init__.py  data.py  run.py
src/lorcana_training/export/: __init__.py  embeddings.py  manifest.py  quantize.py  to_onnx.py
src/lorcana_training/inference/: search.py  styles.py
src/lorcana_training/models/: card_encoder.py  evaluator.py  pretrain_heads.py  proposal.py
src/lorcana_training/prepare/: __init__.py  run.py
src/lorcana_training/pretrain/: __init__.py  (+3 more)
tests/: test_card_encoder.py  test_download.py  test_evaluator_data.py  test_evaluator_model.py  test_evaluator_train.py  test_export.py  test_features.py  test_logical_vocab.py  test_max_copies.py  test_normalise.py  test_onnx_export.py  test_prepare.py  test_pretrain_data.py  test_pretrain_heads.py  test_promote_model.py  test_proposal_data.py  test_proposal_model.py  test_proposal_train.py  test_schemas_generated.py  test_splits.py  test_tables.py  test_tokeniser.py  test_validate.py
(+21 files in other folders)
