[project]
name = "lorcana-training"
version = "0.1.0"
description = "Card encoder + proposal + evaluator for the Lorcana deckbuilder."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "bjorvack" }]
dependencies = [
    "pydantic>=2.7",
    "torch>=2.4",
    "numpy>=1.26",
    "safetensors>=0.4",
    "tokenizers>=0.20",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "datamodel-code-generator>=0.25",
    "pyyaml>=6.0",
    "click>=8.1",
    "requests>=2.32",
    "onnxscript>=0.7.0",
]

[project.scripts]
lorcana-train = "lorcana_training.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lorcana_training"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
